fix show more/less text, add gradient on cutting off attachment and reduce height of attachment text preview

--- a/sass/layout/_webhooks.scss
+++ b/sass/layout/_webhooks.scss
@@ -193,9 +193,11 @@
 
         .attachment__text--collapsed {
             .attachment__text-container {
-                // "max-height" should match MAX_ATTACHMENT_TEXT_HEIGHT constant in
-                // components/post_view/post_attachment.jsx.
-                max-height: 600px;
+                max-height: 200px;
+            }
+
+            .attachment__text-collapse__gradient {
+                height: 10px;
             }
         }
 
